# agile_manip_plan

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yaml
.github/workflows/: ci.yml
colcon_ws/src/agile_manip_description/: CMakeLists.txt  package.xml
colcon_ws/src/agile_manip_description/launch/: display.launch.py
colcon_ws/src/agile_manip_description/meshes/robotiq_140/: robotiq_140_collision.stl
colcon_ws/src/agile_manip_description/rviz/: display.rviz  robot_model.rviz
colcon_ws/src/agile_manip_description/urdf/: iiwa14_robotiq_2f_140.urdf.xacro
colcon_ws/src/agile_manip_examples/: package.xml  setup.cfg  setup.py
colcon_ws/src/agile_manip_examples/agile_manip_examples/: benchmark_harness.py  cumotion_client.py  cumotion_utils.py  dynamic_replan_planner.py  grasp_and_motion_planner.py  graspgen_client.py  graspgen_utils.py  ik_utils.py  obstacle_aware_grasp_and_motion_planner.py  planning_helpers.py
colcon_ws/src/agile_manip_examples/config/: benchmark.yaml  cumotion_iiwa14.yaml  dynamic_replan.yaml  grasp_and_motion.yaml  graspgen_antipodal.yaml  graspgen_suction.yaml  obstacle_aware.yaml
colcon_ws/src/agile_manip_examples/launch/: benchmark.launch.py  cumotion_demo.launch.py  dynamic_replan_demo.launch.py  grasp_and_motion_demo.launch.py  graspgen_demo.launch.py  obstacle_aware_demo.launch.py
colcon_ws/src/agile_manip_examples/test/: test_graspgen_utils.py  test_planning_helpers.py
colcon_ws/src/agile_manip_moveit_config/: CMakeLists.txt  package.xml
colcon_ws/src/agile_manip_moveit_config/config/: iiwa14_robotiq_2f_140.srdf  iiwa14_robotiq_2f_140.xrdf  isaac_ros_cumotion_planning.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
colcon_ws/src/agile_manip_moveit_config/launch/: move_group.launch.py
colcon_ws/src/robotiq_2f_gripper_description/: CMakeLists.txt  package.xml
docker/: Dockerfile
docker/isaac_ros_common_stub/: CMakeLists.txt  package.xml
utils/: run_benchmark.sh  run_cumotion_demo.sh  run_display_demo.sh  run_dynamic_replan_demo.sh  run_grasp_and_motion_demo.sh  run_graspgen_demo.sh  run_obstacle_aware_demo.sh  start_backends.sh  stop_backends.sh
