<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agile_manip_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt 2 configuration for LBR iiwa 14 + Robotiq 2F-140, wired for Isaac ROS cuMotion planning.</description>
  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>agile_manip_description</exec_depend>
  <exec_depend>isaac_ros_cumotion</exec_depend>
  <exec_depend>isaac_ros_cumotion_moveit</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
